--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@types/jest": "^26.0.20",
     "@types/node": "^12.19.16",
     "@types/react-dom": "^17.0.0",
-    "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "jquery": "^3.5.1",
@@ -50,6 +49,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^17.0.3"
+    "@types/react": "^17.0.3",
+    "@types/react-router-dom": "^5.1.7"
   }
 }
